~~~~~~~~~~~~~~~~~~~~~~

* Refactor utilities into seperate files
* Removed the need for the framework to set any input heights to make them all equal heights
* Added a new variable $input-line-height to set the line height of form fields
* Added a new variables $button-line-height to set the line height of .button classes
* Remove unnecessary position relative from grid column

1.7.1 - 23-Jan-2018
~~~~~~~~~~~~~~~~~~~

* Remove undocumented css from radios and checkboxes
* Added input placeholder color style
* Added new table variables
    - $table-background-color
    - $table-border-color
    - $table-font-size

1.7.0 - 11-Jan-2018
~~~~~~~~~~~~~~~~~~~

* You only now need to define additional or overwrite existing colours and buttons within your variables.
* Added a new mixin flip to flip an element on it's x/y/both axis's
* Added new css helpers:
    - .flip-x
    - .flip-y
    - .flip-both
* Fix bug with anchor transition speed using wrong variable
* Three new variables have been created to control transitions:
    - $link-transition
    - $button-transition
    - $input-transition
* ul and ol styles are now in the variables

* BREAKING CHANGES
    - Mixin 'abs-position' renamed to 'position' and has additional optional parameter $position
        - @mixin position($top: auto, $right: auto, $bottom: auto, $left: auto, $position: absolute)
    - Mixin 'vertical-align' has been replaced with 'centerer'
        - @mixin centerer($horizontal: true, $vertical: true, $position: absolute)

* DEPRECIATED VARIABLES 
    - $link-transition-speed
    - $button-transition-speed
    - $input-transition-speed

1.6.2 - 02-Jan-2018
~~~~~~~~~~~~~~~~~~~

* Remove font size in code element
* Remove bottom margin on last child of blockquote

1.6.1 - 13-Dec-2017
~~~~~~~~~~~~~~~~~~~~~~

* Refactor img-fluid to use a mixin

1.6.0 - 23-Nov-2017
~~~~~~~~~~~~~~~~~~~

* Added content columns mixin
* Added code font to all code, kbd, pre, samp elements

1.5.1 - 23-Oct-2017