@@ -5,7 +5,7 @@
 @mixin button {
     display: inline-block;
     padding: $button-padding-y $button-padding-x;
-    color: $font-color;
+    color: $button-default-font-color;
     text-align: center;
     font-family: $base-font-family;
     font-size: $button-font-size;
@@ -15,7 +15,7 @@
     white-space: nowrap;
     background-color: $button-default-bg-color;
     border-radius: $global-radius;
-    border: 1px solid $border-color;
+    border: $button-border-width solid $button-default-border-color;
     cursor: pointer;
     box-sizing: border-box;
     user-select: none;
@@ -30,10 +30,7 @@
 }
 
 // hover and focus state 
-@mixin button-hover(
-        $color: $font-color,
-        $background-color: $button-default-bg-color, 
-        $border-color: darken($border-color, $darken-hover-percent)) {
+@mixin button-hover($color, $background-color, $border-color) {
     &:hover,
     &:focus {
         color: $color;
